# rectangles_intersections

./: CMakeLists.txt  README.md
data/: answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  run_tests.txt  test2.json  test3.json  test4.json  test5.json  test6.json  test_description.json
projects/: CMakeLists.txt
projects/generate_input/: CMakeLists.txt
projects/generate_input/sources/: main.cpp
projects/generate_test/: CMakeLists.txt
projects/generate_test/sources/: main.cpp
projects/rectangles_intersections/: CMakeLists.txt
projects/rectangles_intersections/sources/: main.cpp  rectangles_intersections.cpp  rectangles_intersections.h  rects.cpp  rects.h
projects/run_tests/: CMakeLists.txt
projects/run_tests/sources/: main.cpp  run_tests_utils.cpp  run_tests_utils.h
